--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
                 <!-- Nahit -->
                 <li class="home-blog-post">
                   <div class="blog-thumb">
-                    <a href="students/student_name.html">
+                    <a href="students/nahit_abu-nijaila.html">
                       <img
                         width="304"
                         height="304"
                         class="prof-image"
-                        src="img/students/student_name_index_profile.jpg"
+                        src="img/students/nahit_abu-nijaila_index_profile.jpg"
                         class="attachment-blog-thumb wp-post-image"
-                        alt="student_name"
+                        alt="Nahit Abu-Nijaila"
                       />
                     </a>
                   </div>
@@ -166,10 +166,16 @@
                   <div class="blog-title">
                     <div class="big-comment">
                       <h3>
-                        <a href="students/student_name.html">Student Name</a>
+                        <a href="students/nahit_abu-nijaila.html"
+                          >Nahit Abu-Nijaila</a
+                        >
                       </h3>
                     </div>
-                    <p class="home-blog-post-meta">Tag Line</p>
+                    <p class="home-blog-post-meta">
+                      For once you have tasted flight you will walk the Earth
+                      with your eyes turned skyward, for there you have been and
+                      there you long to return.
+                    </p>
                   </div>
                   <div class="clear"></div>
 
