--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         width="304"
                         height="304"
                         class="prof-image"
-                        src="img/students/nahit_abu-nijaila_index_profile.jpg"
+                        src="img/students/nahit_abu-nijaila_index_profile.jpeg"
                         class="attachment-blog-thumb wp-post-image"
                         alt="Nahit Abu-Nijaila"
                       />
