Amend social links

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -103,9 +103,8 @@
       <div class="page-title">
         <h4 class="ib_main_header">Nahit Abu-Nijaila</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
-          <a href="http://www.linkedin.com/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="https://github.com/"><i class="icon-github ib-social-icons"></i></a>
+          <a href="https://www.linkedin.com/in/nahit-abu-nijaila-mnaea-87942021/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
+          <a href="https://github.com/Nahit-1"><i class="icon-github ib-social-icons"></i></a>
           <a href="#"><i class="icon-rss ib-social-icons"></i></a>
         </div>
 
