--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -139,7 +139,7 @@
                 <div class="services-title"><h3>Biography</h3></div>
                 <div class="clear"></div>
                 <p>
-                  Bio here... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim adminim veniam, quis nostrud exercitation ullamco laboris nisi ut. 
+                  Experienced Property Broker with a demonstrated history of working in the PCL real estate industry. Skilled in Negotiation, Analytical Skills, Sales, Valuation, Pitching and Management. Strong real estate professional with a Bachelor's degree focused in Global Financial Management from Regents Business School.
                 </p>
               </div>
             </div>
