--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -177,25 +177,14 @@
               <div class="services-wrap section coder-cred" id="equalize">
 
                 <div class="column fourth">
-                  <a href="http://www.github.com/" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
+                  <a href="http://www.github.com/Nahit-1" target="_blank"><img src="../img/github.png" alt="GitHub" width="130px"></a>
                 </div>
 
-                <div class="column fourth">
-                  <a href="http://teamtreehouse.com" target="_blank"><img src="../img/treehouse.png" alt="Treehouse" width="130px"></a>
                 </div>
-
-                <div class="column fourth">
-                  <a href="http://www.codeschool.com" target="_blank"><img src="../img/codeschool.jpg" alt="Code School" width="130"></a>
+              <!-- End Service -->
                 </div>
-
-                <div class="column fourth">
-                  <a href="https://coderwall.com/" target="_blank"><img src="../img/coderwall.png" alt="Coder Wall" width="130"></a>
-                </div>
+            <!-- End Coder Cred -->
               </div>
-              <! -- End Service -->
-            </div>
-            <! -- End Coder Cred -->
-          </div>
 
           <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
             <div id="scroll-recently" class="section section-services">
