--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -249,8 +249,12 @@
                   <div class="services-title"><h3>Education</h3></div>
                   <div class="clear"></div>
                   <ul>
-                    <li>University</li>
-                    <li>Other School</li>
+                    <li>
+                      Regents Business School, Bachelor's Degree, Global
+                      Financial Management
+                    </li>
+                    <li>Army & Navy Academy</li>
+                    <li>California State University, Chico</li>
                   </ul>
                 </div>
               </div>
