Add work history

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -267,10 +267,11 @@
                 <div class="services">
                   <div class="services-title"><h3>Work</h3></div>
                   <div class="clear"></div>
-                  <h4>Some Company</h4>
-                  <p>
-                    Blurb about company...
-                  </p>
+                  <ul>
+                    <li>Douglas & Gordon, Sales Broker / Manager</li>
+                    <li>Douglas & Gordon, Sales Negotiator</li>
+                    <li>Anscombe & Ringland, Sales Negotiator</li>
+                  </ul>
                 </div>
               </div>
             </div>
