--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         width="304"
                         height="304"
                         class="prof-image"
-                        src="img/students/student_name_index_profile.jpg"
+                        src="img/students/Ivan-profile.jpg"
                         class="attachment-blog-thumb wp-post-image"
                         alt="student_name"
                       />
@@ -199,15 +199,15 @@
                   <div class="blog-title">
                     <div class="big-comment">
                       <h3>
-                        <a href="students/student_name.html">Student Name</a>
+                        <a href="students/student_name.html">Ivan Szebenszki</a>
                       </h3>
                     </div>
-                    <p class="home-blog-post-meta">Tag Line</p>
+                    <p class="home-blog-post-meta">There isn’t a way things should be. There’s just what happens, and what we do.</p>
                   </div>
                   <div class="clear"></div>
 
                   <div class="excerpt">
-                    <p>Excerpt.</p>
+                    <p>I have BSc in Computer Engineering and about 20 years experience in IT support.</p>
                   </div>
                   <div class="clear"></div>
                 </li>
