Change bg image position

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -30,7 +30,7 @@
     <style>
       .top-page-title {
         background: url(../img/students/nahit_abu-nijaila_background.jpg)
-          no-repeat center center;
+          no-repeat center 62%;
       }
     </style>
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
