Amend favorite cities

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -392,10 +392,9 @@
                         </div>
                         <div class="clear"></div>
                         <p>
-                          <a>Buenos Aires</a><br />
+                          <a>London</a><br />
+                          <a>San Diego</a><br />
                           <a>Barcelona</a><br />
-                          <a>Minneapolis</a><br />
-                          <a>New York</a><br />
                         </p>
                       </div>
                     </div>
