--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -408,9 +408,14 @@
                         <div class="services-title"><h3>Favorites</h3></div>
                         <div class="clear"></div>
                         <p>
-                          - Favorite Website: <a href="#">Site 1</a><br />
-                          - Favorite Comic: <a href="#">Site 2</a><br />
-                          - Favorite Radio Program: <a href="#">Site 3</a><br />
+                          - Favorite Website:
+                          <a href="https://www.youtube.com">YouTube</a><br />
+                          - Favorite Comic:
+                          <a href="https://twitter.com/jkcorden">James Corden</a
+                          ><br />
+                          - Favorite Radio Program:
+                          <a href="http://www.radioskydive.uk/">Radio SkyDive</a
+                          ><br />
                         </p>
                       </div>
                     </div>
