--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -346,8 +346,11 @@
                       </div>
                       <div class="clear"></div>
                       <p>
-                        - <a href="#">Personal Blog</a><br />
-                        - <a href="#">Tumblr</a><br />
+                        -
+                        <a href="https://www.instagram.com/nahit_1/"
+                          >Instagram</a
+                        ><br />
+                        <!-- - <a href="#">Tumblr</a><br /> -->
                       </p>
                     </div>
                   </div>
