Remove coding profiles

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -324,13 +324,13 @@
                       </div>
                       <div class="clear"></div>
                       <p>
-                        - <a href="http://www.codeschool.com/">Code School</a
+                        <!-- - <a href="http://www.codeschool.com/">Code School</a
                         ><br />
                         - <a href="http://teamtreehouse.com/">Treehouse</a
                         ><br />
                         - <a href="http://www.codecademy.com/">Codecademy</a
                         ><br />
-                        - <a href="https://coderwall.com/">Coder Wall</a><br />
+                        - <a href="https://coderwall.com/">Coder Wall</a><br /> -->
                       </p>
                     </div>
                   </div>
