Put services back

--- a/students/nahit_abu-nijaila.html
+++ b/students/nahit_abu-nijaila.html
@@ -294,6 +294,33 @@
                       ><img src="../img/github.png" alt="GitHub" width="130px"
                     /></a>
                   </div>
+
+                  <div class="column fourth">
+                    <a href="http://teamtreehouse.com" target="_blank"
+                      ><img
+                        src="../img/treehouse.png"
+                        alt="Treehouse"
+                        width="130px"
+                    /></a>
+                  </div>
+
+                  <div class="column fourth">
+                    <a href="http://www.codeschool.com" target="_blank"
+                      ><img
+                        src="../img/codeschool.jpg"
+                        alt="Code School"
+                        width="130"
+                    /></a>
+                  </div>
+
+                  <div class="column fourth">
+                    <a href="https://coderwall.com/" target="_blank"
+                      ><img
+                        src="../img/coderwall.png"
+                        alt="Coder Wall"
+                        width="130"
+                    /></a>
+                  </div>
                 </div>
                 <!-- End Service -->
               </div>
